[metadata]
name = pycensus
version = 0.1
author = cinspire93
url = https://github.com/cinspire93/pycensus
description = python package for interacting with Census
long-description = file: README.md
platform = any
keywords = tooling
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7

[options]
zip_safe = true
python_requires = >=3.7, <3.8
packages = find:
install_requires =
    requests

[options.extras_require]
dev =
    pytest

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = zip, gztar

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions

[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/
